# Ecode

./: .gitignore  CMakeLists.txt  EditorRenderer.i  README.md  TODO.md  aiconfig.js  ecodeinit.js.example
.agent/: session_summary.md
doc/: AI_AGENT_PROTOCOL.md  AI_IMPLEMENTATION_PLAN.md  FR-1.1.3_implementation_plan.md  FR-1.1.3_status.md  ImplementationPlan.md  JS_API.md  OPTIMIZATION_OPPORTUNITIES.md  PHASE1_COMPLETE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_3_IMPLEMENTATION_SUMMARY.md  REQUIREMENTS.md  TODO.md  documentation.md  documentation_fr.md  keybindings.md  keybindings_es.md  keybindings_jp.md  task.md
include/: Buffer.h  Dialogs.h  Editor.h  EditorBufferRenderer.h  Localization.h  LspClient.h  MemoryMappedFile.h  PieceTable.h  Process.h  Renderer.h  ScriptEngine.h  SettingsManager.h  StringHelpers.h  resource.h
installer/: ecode.iss
scripts/: ai.js  ai_core.js  ai_session.js  ecodeinit.js  emacs.js  fix_localization.ps1
src/: AppMain.inl  Buffer.cpp  Dialogs.cpp  Ecode.rc  Editor.cpp  EditorBufferRenderer.cpp  EditorBufferRenderer_Draw.cpp  FileUtils.cpp  Globals.inl  Globals.test.inl  JsApi_EditorSettings.inl  JsApi_FileAndBuffer.inl  JsApi_Lsp.inl  JsApi_ShellAndMinibuffer.inl  JsApi_StatusAndDialogs.inl  JsApi_TextEditing.inl  Localization.cpp  LspClient.cpp  MemoryMappedFile.cpp  MinibufferHandler.inl  PieceTable.cpp  Process.cpp  Renderer.cpp  ScriptEngine.cpp  SettingsManager.cpp  TreeViewHelpers.inl  UIHelpers.inl  WindowHandlers_Command.inl  WindowHandlers_Core.inl  WindowHandlers_Input.inl  main.cpp  test_editor_core.cpp
tests/: DebugLog_Stub.cpp  TestGlobals.cpp  api_test.js  check_bindings.cpp  check_bindings.js  emacs_navigation_test.js  killring_test.js  messages_buffer_test.js  module_test.js  multibyte_test.js  multiple_ops_test.js  performance_benchmark.cpp  regression_20260216.js  run_all.bat  test_editor_core.cpp  test_file_io.cpp  test_find_in_files.cpp  test_piecetable.cpp  test_piecetable_stress.cpp  test_search_replace.cpp  test_shortcuts.cpp  test_undoredo_stress.cpp  test_visual_wrap.cpp  total_lines_test.js  undoredo_test.js  undostatelimit_test.js
